--- a/style.css
+++ b/style.css
@@ -23,8 +23,6 @@ body{
     background-position: center center;
     flex-wrap: wrap;
     padding:3px;
-    background:linear-gradient(-45deg,#EE7752);
-    animation: Gradient 15s ease infinite;
 }
 ul {
     display: flex;
@@ -119,6 +117,14 @@ table {
     background-color: aliceblue;
     opacity:0.5;
     margin: 10px;
-    border: 10px;
+    border: 4em;
     padding: 20px;
+    font-style: bold;
+    font-size: 45px;
 }
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
