--- a/trending.css
+++ b/trending.css
@@ -4,9 +4,13 @@
 }
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background:rgb(216, 189, 114);
+    background-image:url('https://bit.ly/2mJLSQO');
     background: linear-gradient(-45deg #EE7752, #E73C7E, #23A6D5);
     background-size: 400% 400%;
+    height:100vh;
+    background-size: center;
+    flex-wrap: wrap;
+    padding:3px;
     animation:Gradient 15s ease infinite;
 }
 @-webkit-keyframes Gradient {
@@ -27,8 +31,7 @@ ul {
     border: blueviolet;
     list-style-type: none;
     display:flex;
-    float:right;
-    
+    float:right;    
 }
 .header {
     background-size: cover;
@@ -42,4 +45,32 @@ p {
     display:flex;
     flex-direction: row;
     flex-wrap: wrap-reverse;
+}
+li {
+    list-style-type: none;
+    display:flex;
+    float:right;
+}
+nav {
+    border: black;
+    display: flexbox;
+    width:100%;
+}
+ul {
+    display: flex;
+    background-color: pink;
+    padding: 20px;
+    border: black;   
+}
+a {
+    text-decoration: none;
+    padding: 10px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+ul {
+    display: flex;
+    background-color: pink;
+    padding: 20px;
+    border: black;   
 }
