--- a/trending.css
+++ b/trending.css
@@ -4,20 +4,21 @@
 }
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-image:url('https://bit.ly/2mJLSQO');
+    background-image:url('https://bit.ly/2n8KOGd');
     background: linear-gradient(-45deg #EE7752, #E73C7E, #23A6D5);
     background-size: 400% 400%;
     height:100vh;
     background-size: center;
+    
     flex-wrap: wrap;
     padding:3px;
     animation:Gradient 15s ease infinite;
 }
 @-webkit-keyframes Gradient {
-    0%{
-        background-position: 0% 50%
     }
-    50%{
+    50%{    0%{
+        background-position: 0% 50%
+
         background-position: 100% 50%
     }
     100%{
@@ -73,4 +74,7 @@ ul {
     background-color: pink;
     padding: 20px;
     border: black;   
+}
+img {
+    
 }
